Fix text alignment

--- a/src/client/styles/input.sass
+++ b/src/client/styles/input.sass
@@ -1,6 +1,5 @@
 #input-section
         margin-top: 7rem
-        text-align: center
 
         #txt-area
                 width: 100%
